; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ntb/ntb_hw/extr_ntb_hw_amd.c_amd_ntb_link_is_up.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ntb/ntb_hw/extr_ntb_hw_amd.c_amd_ntb_link_is_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amd_ntb_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, i32*)* @amd_ntb_link_is_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @amd_ntb_link_is_up(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.amd_ntb_softc*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.amd_ntb_softc* @device_get_softc(i32 %8)
  store %struct.amd_ntb_softc* %9, %struct.amd_ntb_softc** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load %struct.amd_ntb_softc*, %struct.amd_ntb_softc** %7, align 8
  %14 = call i32 @amd_ntb_link_sta_speed(%struct.amd_ntb_softc* %13)
  %15 = load i32*, i32** %5, align 8
  store i32 %14, i32* %15, align 4
  br label %16

16:                                               ; preds = %12, %3
  %17 = load i32*, i32** %6, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %16
  %20 = load %struct.amd_ntb_softc*, %struct.amd_ntb_softc** %7, align 8
  %21 = call i32 @amd_ntb_link_sta_width(%struct.amd_ntb_softc* %20)
  %22 = load i32*, i32** %6, align 8
  store i32 %21, i32* %22, align 4
  br label %23

23:                                               ; preds = %19, %16
  %24 = load %struct.amd_ntb_softc*, %struct.amd_ntb_softc** %7, align 8
  %25 = call i32 @amd_link_is_up(%struct.amd_ntb_softc* %24)
  ret i32 %25
}

declare dso_local %struct.amd_ntb_softc* @device_get_softc(i32) #1

declare dso_local i32 @amd_ntb_link_sta_speed(%struct.amd_ntb_softc*) #1

declare dso_local i32 @amd_ntb_link_sta_width(%struct.amd_ntb_softc*) #1

declare dso_local i32 @amd_link_is_up(%struct.amd_ntb_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
